# dlshogi2-eval-only

./: NOTICE  README.md  UPSTREAM_SNAPSHOT.md  prepare_all.sh  pyproject.toml
manifests/: reference_startpos.manifest.json
scripts/: eval_position.py  export_reference.py  gen_goldens.py
src/dlshogi2_eval/: __init__.py  _compat.py  board_io.py  cli_eval_position.py  cli_export_model_package.py  cli_export_openheart_package.py  cli_export_reference.py  cli_gen_goldens.py  cli_interpret_openheart.py  cli_interpret_outputs.py  export.py  features.py  infer.py  loader.py  manifest.py  model.py  model_package.py  openheart_interpret.py  openheart_package.py  output_interpret.py
tests/: test_backend_eval_io.py  test_board_io.py  test_export_text_dumps.py  test_infer_import.py  test_manifest.py  test_model_package.py  test_model_shapes.py  test_openheart_package.py
